Use rake instead of rails to migrate
"rails db:migrate" won't work.

--- a/chapter-test-driven-development.adoc
+++ b/chapter-test-driven-development.adoc
@@ -57,7 +57,7 @@ $ **rails generate scaffold user login_name first_name last_name birthday:date**
       create      app/helpers/users_helper.rb
       invoke      test_unit
       [...]
-$ **rails db:migrate**
+$ **rake db:migrate**
       [...]
 ----
 
