Use "rails test"
… instead of "rake test". I see, I'm not the only one
whose brain is "version 4.2" :).

--- a/chapter-test-driven-development.adoc
+++ b/chapter-test-driven-development.adoc
@@ -210,7 +210,7 @@ two:
   last_name: Scully
 ----
 
-To be on the safe side, let’s do another `rake test` after making
+To be on the safe side, let’s do another `rails test` after making
 our changes (you really can’t do that often enough):
 
 [subs=+quotes]
