Use "rails generate scaffold …"
… instead of "rake generate scaffold".
While "rake test" and "rails test" both are possible,
"rake generate scaffold …" is not a valid syntax IMHO.

--- a/chapter-test-driven-development.adoc
+++ b/chapter-test-driven-development.adoc
@@ -540,7 +540,7 @@ the Rails application. As an example, we will write an integration test
 that tries to create a new user via the Web GUI, but omits the
 `login_name` and consequently gets corresponding flash error messages.
 
-A `rake generate scaffold` generates unit and functional tests, but not
+A `rails generate scaffold` generates unit and functional tests, but not
 integration tests. You can either do this manually in the directory
 `test/integration/` or more comfortably with
 `rails generate integration_test`. So let’s create an integration test:
